# django-site

./: .gitignore  README.md  build.sh  render.yaml  requirements.txt  start.sh
mysite/: .env.example  build.sh  manage.py  pyproject.toml  requirements.txt
mysite/accounts/: urls.py  views.py
mysite/accounts/templates/accounts/: login.html
mysite/contacts/: forms.py  models.py  urls.py  views.py
mysite/contacts/migrations/: 0001_initial.py
mysite/contacts/templates/contacts/: create.html  name.html
mysite/mysite/: admin.py  asgi.py  settings.py  settings_base.py  settings_development.py  settings_production.py  urls.py  wsgi.py
mysite/mysite/tests/accounts/: test_views.py
mysite/mysite/tests/contacts/: test_forms.py  test_models.py  test_views.py
mysite/mysite/tests/polls/: test_models.py  test_views.py
mysite/polls/: admin.py  apps.py  models.py
mysite/polls/migrations/: 0001_initial.py  0002_question_active.py  0003_alter_choice_options_alter_question_options.py
