[project]
name = "django-site"
version = "0.1.0"
description = ""
authors = [
    {name = "uilliambruno-droid",email = "uilliambruno@gmail.com"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "django (>=6.0.3,<7.0.0)",
    "ipython (>=9.11.0,<10.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-django (>=4.12.0,<5.0.0)",
    "whitenoise[brotli]",
    "gunicorn (>=25.1.0,<26.0.0)"
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "mysite.settings"
python_files = ["test_*.py", "*_tests.py"]
addopts = "-ra"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
